--- a/.github/workflows/README.yml
+++ b/.github/workflows/README.yml
@@ -22,3 +22,5 @@ jobs:
           LANG: es
           # ISO Langusge Code.
           # Supported Languages below
+      - name: Translate Readme Action
+        uses: dephraiim/translate-readme@v1
